[package]
name = "ionic"
version = "0.0.0"
description = "IONIC Web Server"
authors = ["Kanudo <kanudo@ikanudo.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ionic-rs/ionic"
documentation = "https://docs.rs/ionic"
repository = "https://github.com/ionic-rs/ionic"
categories = ["web-programming::http-server"]
keywords = ["http", "web", "server", "ionic"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
